[package]
name = "wgputerm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgputerm"
path = "src/main.rs"

[dependencies]
winit = { version = "*", features = ["android-native-activity"] }
env_logger = "*"
log = "*"
wgpu = "*"
pollster = "*"
anyhow = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
console_log = "*"
wgpu = { version = "*", features = ["webgl"]}
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = [
    "Document",
    "Window",
    "Element",
]}
